<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mrprice.it226project3.SetTimeZone">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_zone_select"
        android:layout_gravity="center" />

    <EditText android:id="@+id/enter_time_zone"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/enter_time_zone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_use_custom_zone"
        android:onClick="createAlarmCustom"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_use_current_zone"
        android:onClick="createAlarmCurrent" />
</LinearLayout>
