<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mrprice.it226project3.MainActivity">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center" />

    <!-- Msg -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/warning"
        android:layout_gravity="center" />

    <!-- "Create Alarm" button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_one_time"
        android:onClick="setOneTime"
        android:layout_gravity="center"/>

    <!-- "Create Timer" button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_timer"
        android:onClick="setTimer"
        android:layout_gravity="center"/>

    <!-- "Create Location Alarm" button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_location"
        android:onClick="setLocation"
        android:layout_gravity="center"/>

</LinearLayout>
