<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mrprice.it226project3.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_alarm"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_minute"
        android:layout_gravity="center" />

    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView1"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="Old Value : " />


    <TextView
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="New Value : " />

    <Button
        android:id="@+id/locationAlarmBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_use_minutes"
        android:onClick="createLocationAlarm"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/defaultAlarmBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_use_default"
        android:onClick="createDefaultAlarm"
        android:layout_gravity="center"/>


</LinearLayout>
