<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:orientation="vertical"
        tools:context="com.example.mrprice.it226project3.MainActivity"
        android:baselineAligned="false"
        android:clickable="true"
        android:contextClickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_alarm"
            android:layout_gravity="center" />

        <EditText android:id="@+id/edit_message"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_alarm_time"
            android:layout_gravity="center" />

        <TimePicker
            android:id="@+id/timePickerOneTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_alarm_date"
            android:layout_gravity="center" />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendarViewOneTime" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_select_time_zone"
            android:onClick="setTimeZone" />

    </LinearLayout>
</ScrollView>